@@ -1,11 +1,0 @@
-This package was debianized by Frank B. Brokken <f.b.brokken@rug.nl> on
-Wed, 18 Jun 2003 12:13:41 +0200.
-
-Copyright:  
-    Stealth File Integrity Scanner
-    Copyright (c) 2003 - now by Frank B. Brokken, University of Groningen.
-
-Licensed under the Gnu General Public License, see
-    /usr/share/common-licenses/GPL
-
-Upstream Author: Frank B. Brokken <f.b.brokken@rug.nl> 
