@@ -1,2 +1,0 @@
-usr/sbin
-usr/share/man/man1
