@@ -1,1 +1,0 @@
-stealth_1.45-1_i386.deb admin optional
