@@ -1,228 +1,0 @@
-stealth (1.45-1) unstable; urgency=low
-
-  * Reusing icmake, see the project's top-level `changelog' file.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Aug 2006 17:55:50 +0200
-
-stealth (1.44-1) unstable; urgency=low
-
-  * License changed to the GNU GENERAL PUBLIC LICENSE. See the file
-    `copyright'. 
-
-    Introduced George Danchev <danchev@spnet.net> as uploader
-
-    From now on this file will only reflect Debian-specific changes. See the
-    newly added file changelog for `upstream' changes. At this point, 
-    changelog will be a mere copy of debian's changelog file.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 19 Jul 2006 12:57:17 +0200
-
-stealth (1.43) unstable; urgency=low
-
-  * Following suggestions made by George Danchev, this version was compiled by
-    the unstable's g++ compiler (version >= 4.1), which unveiled several flaws
-    in the library's class header files. These flaws were removed (i.e.,
-    repaired).
-
-    In order to facilitate compiler selection, the compiler to use is defined
-    in the INSTALL.cf file.
-
-    The debian control-files (i.e., all files under the debian subdirectory)
-    were removed from the source distribution, which is now also named in
-    accordance with the Debian policy. A diff.gz file was added.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu,  6 Jul 2006 12:24:58 +0200
-
-stealth (1.42) unstable; urgency=low
-
-  * When a (remote) CHECK command failed to return 0, Stealth didn't properly
-    terminate. This was repaired by changing the return value of
-    Reporter::relax() to type bool, returning d_continue. This return value is
-    now checked in Monitor::control(). If not true, the Monitor::control()
-    loop terminates, thus terminating the program with exit value 1.
-
-    make/install script now defines PREFIX=/ if called without argument.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 26 Jun 2006 09:27:34 +0200
-
-stealth (1.41c) unstable; urgency=low
-
-  * Stealth was `lintianized' and `lindanized'. The info in debian's control
-    file was adapted. As the bobcat libraries are now in libbobcat1* packages,
-    stealth's dependencies were adapted accordingly.
-
- -- Frank B. Brokken <f.b.broken@rug.nl>  Sun, 28 May 2006 12:39:15 +0200
-
-stealth (1.41b) unstable; urgency=low
-
-  * Recompilation because of changes in the bobcat library.
-    This version of Stealth depends on bobcat 1.7.0.
-    No changes to Stealth itself. The compilation dependency for the
-    g++ compiler has been restored.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue,  2 May 2006 21:37:31 +0200
-
-stealth (1.41a) unstable; urgency=low
-
-  * Minor changes to the make/library script, adapted the program's release
-    years. Dependency check in debian/control for g++ removed since it fails
-    for unkown reasons. The version should be >= 4.0.2
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed,  1 Feb 2006 12:46:01 +0100
-
-stealth (1.41) unstable; urgency=low
-
-  * Library requirement up-to-date: bobcat 1.6.0
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 26 Dec 2005 19:17:24 +0100
-
-stealth (1.40) unstable; urgency=low
-
-  * all local Pattern objects are now static data members
-
-    removed: superfluous stealth.doc-base; debugmacro;
-    classes arg, configfile, errno fdout fork ifdnbuf pattern pipe selector
-    (now in bobcat)
-    
-    Renamed all .h2 headers to my standard .ih names:
-            util, configsorter, reporter scanner
-    
-    Reporter::reset() now calls Reporter::rewind()
-    
-    Reporter uses d_hasMail data member instead of d_sizeBeyondHeader:
-    d_hasMail can simply be set to false following the writing of the header,
-    and then to true at each sync() command.
-    
-    added: Reporter::exit(), first inserting the message into the reporter,
-    then to cerr, and exiting.
-    
-    fatal error messages are no longer suppressed with -q
-
-    man(ual) pages adapted accordingly.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 26 Dec 2005 18:23:25 +0100
-
-stealth (1.35) unstable; urgency=low
-
-  * Recompilation using g++-4.0. Requires bobcat >= 1.4.0
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 19 Nov 2005 16:47:28 +0100
-
-stealth (1.34) unstable; urgency=low
-
-  * Removed dependencies on `icmake'. See the file `INSTALL' for details about
-    compiling and installing `stealth' from the source package, rather than
-    from the binary (.deb) package. 
-    Stealth's functionality has not been altered.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun,  4 Sep 2005 15:11:46 +0200
-
-stealth (1.33) unstable; urgency=low
-
-  * With the advent of the bobcat library (Brokken's Own Base Classes And
-    Templates) various classes were removed from stealth's distribution: Arg,
-    Configfile, Errno, Fork, Hashclasses, Ifdstreambuf, Ofdbuf, Pattern, and
-    Pipe. Also, the manual pages were adapted to reflect the fact that I'm
-    distributing Debian (source and binary) packages, rather than pure source
-    packages. No further change in functionality was implemented. To compile
-    stealth bobcat-dev is required, to run the binary bobcat itself. See
-    http://bobcat.sourceforge.net and http://sourceforge.net/projects/bobcat
-    for further information about bobcat.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 20 Aug 2005 15:35:32 +0200
-
-stealth (1.32) unstable; urgency=low
-
-  * Version 1.31 was not distributed. Version 1.32 offers identical user
-    options as V 1.31, but has some minor internal improvements in its code
-    over 1.31. In particular, a running stealth process will signal its
-    suppressor that it's ready. This simplifies the construction of, e.g., 
-    logrotate scripts.
-
-    Note btw that the date and timestamps in this file are CET (+ DST when
-    active)
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon,  1 Aug 2005 10:49:36 +0200
-
-stealth (1.31) unstable; urgency=low
-
-  * Added --suspend and --resume options allowing logfile rotations on a
-    keepalive running stealth process. Changed the manual page using standard
-    manpage*() macros instead of SUBST()s
-
-    Internally, a Monitor class was added, exercising and taking over  much of
-    the control functionality of the Scanner class
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 30 Jul 2005 00:13:14 +0200
-
-stealth (1.30-2a) unstable; urgency=low
-
-  * Stupid: forgot to update the program's version itself :-( 
-    Now it's 1.30-2a
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 27 Apr 2004 17:56:54 +0200
-
-stealth (1.30-2) unstable; urgency=low
-
-  * Repaired bug in Scanner::Scanner():
-    The process-id's of the SH and SSH programs were assigned before
-    IOFORK::fork() was executed, so they received undefined values. This was
-    repaired by assigning the d_shPid and d_sshPid assignments to the
-    Scanner::preamble() function.
-
-    Also, the call to killChildren() at the end of stealth's main() function
-    (in stealth.cc) was superfluous, as the atexit() call in preamble already
-    ensures that the childprocesses are called.
-
-    Finally, the Yodl manual files are adapted to Yodl V. >= 2.00. The
-    /usr/local/share/yodl/macros.yo file isn't required anymore, and the
-    XXsloppyhfuzz undefinition was changed into a call of nosloppyhfuzz().
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 27 Apr 2004 17:39:17 +0200
-
-stealth (1.30-1) unstable; urgency=low
-
-  * --keep-alive, --terminate and --rerun require the name of a file in which 
-    the process id of the running stealth process is stored. This file will be
-    writen when the --keep-alive flag is used, read by the other two and
-    removed by the corresponding stealth process when it terminates. Manpages
-    and docs updated accordingly.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 17 Dec 2003 09:21:11 +0100
-
-stealth (1.30) unstable; urgency=low
-
-  * --terminate, --rerun, --repeat and --keep-alive flags were added to allow
-    stealth to keep an existing connection for longer periods of
-    time. Manpages and docs updated accordingly
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 12 Dec 2003 12:45:45 +0100
-
-stealth (1.22-0) unstable; urgency=low
-
-  * Added GET and PUT. Put allows stealth to put files to the client using
-    the existing ssh connection.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 26 Nov 2003 21:25:02 +0100
-
-stealth (1.21-0) unstable; urgency=low
-
-  * Added the GET command, allowing stealth to retrieve files from the client
-    for, e.g., local inspection, without requiring an additional ssh
-    connection.
-
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 22 Nov 2003 13:55:40 +0100
-
-stealth (1.20-2) unstable; urgency=low
-
-  * New buildscripts added for man(ual) pages. This file will take over from
-    CHANGELOG which logged the original, non-Debian distribution. 
-
- -- Frank B. Brokken <f.b.brokken@rc.rug.nl>  Fri, 20 Jun 2003 17:21:42 +0200
-
-stealth (1.20-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- Frank B. Brokken <f.b.brokken@rc.rug.nl>  Wed, 18 Jun 2003 12:13:41 +0200
-
