@@ -3,6 +3,14 @@
     Stealth's icmake scripts adapted to work with icmake > V 7.00 as well.
     (not yet distributed in a new release version 1.46)
 
+    Random interval based activation time clarified and implementation
+    slightly changed. Man-page changed accordingly
+
+    Examples now have `find' options (like -xdev) at their proper places.
+
+    Provded the stealthmail script with a sorting filter, filtering only the
+    ADDED, MODIFIED and DELETED messages from mail generated by stealth.
+
 stealth (1.45)
 
   * The previously used scripts below make/ are obsolete and were removed from
